--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -60,4 +60,10 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	transition: all 0.3s ease 0s;
+}
+
+.btn:hover{
+	background: var(--colorSecondaryHover);
+
 }
