--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -18,6 +18,25 @@
 	letter-spacing: -0.02px;
 }
 
+.headName {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.sortImage {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding-right: 20px;
+	width: 40px;
+	height: 40px;
+	cursor: pointer;
+}
+
+.sortImage svg path:hover {
+	stroke: black;
+}
+
 .contentTable {
 	height: 68px;
 	border-bottom: 1px solid rgb(242, 238, 238);
